#40168 【android3.0】log代码有错